--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 						        <section>
 							<h2>News</h2>
+								<li>10/05/2022 Our team won the first task of the Preterm Birth Prediction - Microbiome DREAM Challenge. Congratulations to Jifan (PI: Guanhua Chen) and Zhoujingpeng! </li>
+								<br>								
 								<li>09/01/2021 We received funds from NSF (PI: Guanhua Chen) to develop methods for microbiome data. </li>
 								<br>
 								<li>08/20/2020 We received an R01 from NIGMS to develop methods for microbiome data. Looking forward to the fun research ahead of us!</li>
