--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 						        <section>
 							<h2>News</h2>
-								<li>10/05/2022 Our team won the first task of the <a href="https://www.synapse.org/#!Synapse:syn26133770/wiki/">Preterm Birth Prediction - Microbiome DREAM Challenge</a>. Congratulations to Jifan (PI: Guanhua Chen) and Zhoujingpeng! </li>
+								<li>10/05/2022 Our team won the Task 1 of the <a href="https://www.synapse.org/#!Synapse:syn26133770/wiki/">Preterm Birth Prediction - Microbiome DREAM Challenge</a>. Congratulations to Jifan (PI: Guanhua Chen) and Zhoujingpeng! </li>
 								<br>								
 								<li>09/01/2021 We received funds from NSF (PI: Guanhua Chen) to develop methods for microbiome data. </li>
 								<br>
