--- a/publications.html
+++ b/publications.html
@@ -44,10 +44,15 @@
 						<h2>Publications</h2>
 	
 <p> * indicates names are Dr. Tang's advisees </p>
+
+<p><a href=""><strong>Multi-trait analysis of gene-by-environment interactions in large-scale genetic studies.</strong></a><br>
+*Luo L, Mehrotra DV, Shen J, <strong>Tang ZZ</strong> (2023).<br>
+<em>Biostatistics, accepted.</em></p>
+	
 							
-<p><a href=""><strong>Exclusive breastfeeding, the early-life microbiome and immune response, and common childhood respiratory illnesses.</strong></a><br>
+<p><a href="https://www.jacionline.org/article/S0091-6749(22)00292-5/fulltext"><strong>Exclusive breastfeeding, the early-life microbiome and immune response, and common childhood respiratory illnesses.</strong></a><br>
 Rosas-Salazar C, Shilts MH, <strong>Tang ZZ</strong>, *Hong Q, Turi KN, Snyder BM, Wiggins DA, Lynch CE, Gebretsadik T, Peebles RS, Anderson LJ, Das SR, and Hartert TV (2022).<br>
-<em>Journal of Allergy and Clinical Immunology, accepted.</em></p>
+<em>Journal of Allergy and Clinical Immunology, 150(3), 612-621.</em></p>
 
 <p><a href="http://arxiv.org/abs/2109.01107"><strong>A phylogeny-based test of mediation effect in microbiome.</strong></a><br>
 *Hong Q, Chen G, and <strong>Tang ZZ</strong>(2021).<br>
