--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
 						        <section>
 							<h2>News</h2>
-								<li>02/22/2023 Our MTAGEI paper has been accepted in <strong>Biostatistics</strong>. MTAGEI is a method for multi-trait analysis of gene-by-environment interactions in large-scale genetic studies. The R package is <a href="https://github.com/lan/MTAGEI">here</a>.</li>	
+								<li>03/15/2023 Our PhyloMed paper has been accepted in <strong>Genome Biology</strong>. Good job, Kirin! PhyloMed is a method for microbiome mediation analysis. The method is implemented in the <a href="https://github.com/KiRinHong/miMediation">miMediation R package</a>.</li>	
+								<br>
+								<li>02/22/2023 Our MTAGEI paper has been accepted in <strong>Biostatistics</strong>. MTAGEI is a method for multi-trait analysis of gene-by-environment interactions in large-scale genetic studies. The R package is  <a href="https://github.com/lan/MTAGEI">here</a>.</li>	
 								<br>
 								<li>10/05/2022 Our team won Task 1 of the <a href="https://www.synapse.org/#!Synapse:syn26133770/wiki/">Preterm Birth Prediction - Microbiome DREAM Challenge</a>. Congrats to Jifan (PI: Guanhua Chen) and Zhoujingpeng! </li>
 								<br>								
