--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,11 @@
 						<h2>Publications</h2>
 	
 <p> * indicates names are Dr. Tang's advisees </p>
-
+							
+<p><a href=""><strong>PhyloMed: a phylogeny-based test of mediation effect in microbiome.</strong></a><br>
+*Hong Q, Chen G, <strong>Tang ZZ</strong> (2023).<br>
+<em>Genome Biology, accepted.</em></p>
+							
 <p><a href=""><strong>Multi-trait analysis of gene-by-environment interactions in large-scale genetic studies.</strong></a><br>
 *Luo L, Mehrotra DV, Shen J, <strong>Tang ZZ</strong> (2023).<br>
 <em>Biostatistics, accepted.</em></p>
