--- a/people.html
+++ b/people.html
@@ -81,7 +81,7 @@
                     			</p> 
 	
 				    	<p> 
-					<h3>Zou Xu</h3>
+					<h3>Xu Zou</h3>
 					MS student, Department of Statistics
                     			</p> 
 
@@ -110,7 +110,7 @@
 		
 			        	<p>
 					<h3>Weipeng Zhou (2017-2019)</h3>
-					Current: PhD program in Biomedical Informatics, University of Washington
+					Current: PhD student in Biomedical Informatics, University of Washington
 					</p>
 					
 					
