--- a/publications.html
+++ b/publications.html
@@ -49,9 +49,9 @@
 *Hong Q, Chen G, <strong>Tang ZZ</strong> (2023).<br>
 <em>Genome Biology, accepted.</em></p>
 							
-<p><a href=""><strong>Multi-trait analysis of gene-by-environment interactions in large-scale genetic studies.</strong></a><br>
+<p><a href="https://doi.org/10.1093/biostatistics/kxad004"><strong>Multi-trait analysis of gene-by-environment interactions in large-scale genetic studies.</strong></a><br>
 *Luo L, Mehrotra DV, Shen J, <strong>Tang ZZ</strong> (2023).<br>
-<em>Biostatistics, accepted.</em></p>
+<em>Biostatistics, kxad004.</em></p>
 							
 <p><a href="https://www.jacionline.org/article/S0091-6749(22)00292-5/fulltext"><strong>Exclusive breastfeeding, the early-life microbiome and immune response, and common childhood respiratory illnesses.</strong></a><br>
 Rosas-Salazar C, Shilts MH, <strong>Tang ZZ</strong>, *Hong Q, Turi KN, Snyder BM, Wiggins DA, Lynch CE, Gebretsadik T, Peebles RS, Anderson LJ, Das SR, and Hartert TV (2022).<br>
