--- a/publications.html
+++ b/publications.html
@@ -45,9 +45,9 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
-<p><a href=""><strong>PhyloMed: a phylogeny-based test of mediation effect in microbiome.</strong></a><br>
+<p><a href="https://doi.org/10.1186/s13059-023-02902-3"><strong>PhyloMed: a phylogeny-based test of mediation effect in microbiome.</strong></a><br>
 *Hong Q, Chen G, <strong>Tang ZZ</strong> (2023).<br>
-<em>Genome Biology, accepted.</em></p>
+<em>Genome Biology, https://doi.org/10.1186/s13059-023-02902-3.</em></p>
 							
 <p><a href="https://doi.org/10.1093/biostatistics/kxad004"><strong>Multi-trait analysis of gene-by-environment interactions in large-scale genetic studies.</strong></a><br>
 *Luo L, Mehrotra DV, Shen J, <strong>Tang ZZ</strong> (2023).<br>
