--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
-<p><a href="https://doi.org/10.1186/s13059-023-02902-3"><strong>PhyloMed: a phylogeny-based test of mediation effect in microbiome.</strong></a><br>
+<p><a href="https://rdcu.be/c9GBn"><strong>PhyloMed: a phylogeny-based test of mediation effect in microbiome.</strong></a><br>
 *Hong Q, Chen G, <strong>Tang ZZ</strong> (2023).<br>
 <em>Genome Biology, https://doi.org/10.1186/s13059-023-02902-3.</em></p>
 							
