--- a/software.html
+++ b/software.html
@@ -43,6 +43,20 @@
 
 						<h2>Software</h2>
 						
+
+<section>
+<p><strong><font size="5">miMediation: an R package for performing mediation test for microbiome data. </font></strong></p>
+<p> The package implemented the phyloMed method. phyloMed enables us to test the mediation effect in high-dimensional microbial composition. The
+method leverages the hierarchical phylogeny relationship among different microbial taxa to decompose the complex mediation model on the full microbial composition into multiple simple independent local mediation models on subcompositions. The phyloMed function (a) performs the
+mediation test for the subcomposition at each internal node of the phylogenetic tree and pinpoint
+the mediating nodes with significant test p-values, and (b) combines all subcomposition p-values to
+assess the overall mediation effect of the entire microbial community.</p>
+<p><strong><font size="5">References:</font></strong><a href="https://rdcu.be/b6t01">Tang ZZ <i>et al.</i> 2020 </a>.</p>
+<footer class="controls">
+<a href="https://github.com/KiRinHong/miMediation" class="button" download="download"><font style="text-transform: none;"> Download miMediation v0.1 </font></a>
+</footer>
+</section>							
+							
 <section>
 <p><strong><font size="5">PSCAN: An R package to perform protein-structure-guided scan (PSCAN) method for testing gene-level associations and identifying signal regions. </font></strong></p>
 <p>PSCAN is a new set of gene-level association tests and signal variant detection methods that leverage the tendency of functional variants to cluster in 3D protein space. 
