--- a/people.html
+++ b/people.html
@@ -75,19 +75,20 @@
 					Undergraduate, University of Science and Technology of China
                     			</p> 
 		
-				    	<p> 
-					<h3>Zheming Cao</h3>
-					MS student, Department of Statistics
-                    			</p> 
-	
-				    	<p> 
-					<h3>Xu Zou</h3>
-					MS student, Department of Statistics
-                    			</p> 
 
 					<br style = “line-height:10;”>
 					<h2>Alumni</h2>
-			
+
+				    	<p> 
+					<h3>Zheming Cao (2022-2023)</h3>
+					Current: PhD student in Statistics, Iowa State University
+                    			</p> 
+	
+				    	<p> 
+					<h3>Xu Zou (2022-2023)</h3>
+					Current: PhD student in Statistics, University of Pittsburgh
+                    			</p> 
+							
 					<p> 				
 					<h3>Shuren He (2021-2022) </h3>
 					Current: PhD student in Statistics, Texas A&M University
