--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,14 @@
 						<h2>Publications</h2>
 	
 <p> * indicates names are Dr. Tang's advisees </p>
+
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/36945505/"><strong>Microbiome Preterm Birth DREAM Challenge: crowdsourcing machine learning approaches to advance preterm birth research.</strong></a><br>
+Golob JL, Oskotsky TT, Tang AS, Roldan A, Chung V, Ha CWY, Wong RJ, Flynn KJ, Parraga-Leo A, Wibrand C, Minot SS, Andreoletti G, Kosti I, Bletz J, Nelson A, Gao J, Wei Z, Chen G, <strong>Tang ZZ</strong>, Novielli P, Romano D, Pantaleo E, Amoroso N, Monaco A, Vacca M, De Angelis M, Bellotti R, Tangaro S, Kuntzleman A, Bigcraft I, Techtmann S, Bae D, Kim E, Jeon J, Joe S; Preterm Birth DREAM Community; Theis KR, Ng S, Lee Li YS, Diaz-Gimeno P, Bennett PR, MacIntyre DA, Stolovitzky G, Lynch SV, Albrecht J, Gomez-Lopez N, Romero R, Stevenson DK, Aghaeepour N, Tarca AL, Costello JC, Sirota M. (2023)<br>
+<em>Cell Reports Medicine, accepted.</em></p>
+							
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/37758833/"><strong>Genetic risk score in multiple sclerosis is associated with unique gut microbiome.</strong></a><br>
+Elsayed NS, Valenzuela RK, Kitchner T, Le T, Mayer J, <strong>Tang ZZ</strong>, Bayanagari VR, Lu Q, Aston P, Anantharaman K, and Shukla SK (2023).<br>
+<em>Scientific Reports, 13(1):16269.</em></p>
 							
 <p><a href="https://rdcu.be/c9GBn"><strong>PhyloMed: a phylogeny-based test of mediation effect in microbiome.</strong></a><br>
 *Hong Q, Chen G, <strong>Tang ZZ</strong> (2023).<br>
